--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,9 +219,9 @@
       margin-top: -50px;
       padding-top: -100px;
       border-radius: 17px;
-      background-color: #4ADFCC;
+      background-color: white;
       margin-top: 25px;
-      color:white;
+      color:black;
       box-shadow: 2px 2px 2px 2px #E0E0E0;
       width: 80%;
   }
@@ -231,9 +231,10 @@
       margin-top: -50px;
       padding-top: -100px;
       border-radius: 17px;
-      background-color: orange;
+      background-color: white;
       margin-top: 25px;
-      color:white;
+      font-size: 5px;
+      color:black;
       box-shadow: 2px 2px 2px 2px #E0E0E0;
       width: 80%;
   }
